# fin

./: pyproject.toml
src/fin/: __init__.py  __main__.py  agent.py  compute.py
