[project]
name = "fin"
version = "0.1.0"
dependencies = [
    "openai-agents>=0.0.19",
]
requires-python = ">= 3.8"

[project.scripts]
"fin" = "fin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fin"]

[tool.pyright]
venvPath = "."
venv = ".venv"
